--- a/scripts/MeshakkelatyV2.ipynb
+++ b/scripts/MeshakkelatyV2.ipynb
@@ -158,6 +158,49 @@
     "# Create a DataLoader instance with collate_fn\n",
     "dataloader = DataLoader(train_dataset, batch_size=256, shuffle=True, collate_fn=TashkeelDataset.collate_fn)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn \n",
+    "\n",
+    "class MeshakkelatyModel(nn.Module):\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_size, output_size):\n",
+    "        super(MeshakkelatyModel, self).__init__()\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.blstm1 = nn.LSTM(embedding_dim, hidden_size, bidirectional=True, batch_first=True)\n",
+    "        self.dropout1 = nn.Dropout(0.5)\n",
+    "        self.blstm2 = nn.LSTM(2 * hidden_size, hidden_size, bidirectional=True, batch_first=True)\n",
+    "        self.dropout2 = nn.Dropout(0.5)\n",
+    "        self.dense1 = nn.Linear(2 * hidden_size, 512)\n",
+    "        self.dense2 = nn.Linear(512, 512)\n",
+    "        self.output = nn.Linear(512, output_size)\n",
+    "        self.softmax = nn.Softmax(dim=-1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.embedding(x)\n",
+    "        x, _ = self.blstm1(x)\n",
+    "        x = self.dropout1(x)\n",
+    "        x, _ = self.blstm2(x)\n",
+    "        x = self.dropout2(x)\n",
+    "        x = self.dense1(x)\n",
+    "        x = self.dense2(x)\n",
+    "        x = self.output(x)\n",
+    "        x = self.softmax(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meshakkelaty = MeshakkelatyModel(vocab_size=len(train_dataset.CHAR_TO_ID), embedding_dim=25, hidden_size=256, output_size=len(train_dataset.DIACRITIC_TO_ID))"
+   ]
   }
  ],
  "metadata": {
