Training loop bug

--- a/scripts/MeshakkelatyV2.ipynb
+++ b/scripts/MeshakkelatyV2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,53 +115,74 @@
     "            y.append(self.DIACRITIC_TO_ID['<EOS>'])\n",
     "            y = self._one_hot_encode(y, len(self.DIACRITIC_TO_ID))\n",
     "            \n",
-    "            inputs_embeddings.append(x)\n",
-    "            one_hot_labels.append(y)\n",
+    "            inputs_embeddings.append((x, y)) \n",
+    "            \n",
+    "        return inputs_embeddings\n",
     "\n",
-    "        return inputs_embeddings, one_hot_labels\n",
-    "    \n",
-    "    def _pad_sequences(self, sequences, pad_token_x, pad_token_y):\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def _pad_sequences(sequences, pad_token_x, pad_token_y):\n",
     "        max_len_x = max(len(seq[0]) for seq in sequences)\n",
     "        max_len_y = max(len(seq[1]) for seq in sequences)\n",
     "\n",
-    "        padded_sequences_x = [seq[0] + [pad_token_x] * (max_len_x - len(seq[0])) for seq in sequences]\n",
-    "        padded_sequences_y = [seq[1] + [pad_token_y] * (max_len_y - len(seq[1])) for seq in sequences]\n",
+    "        padded_sequences_x = [torch.cat([torch.tensor(seq[0]), torch.tensor([pad_token_x] * (max_len_x - len(seq[0])))]) for seq in sequences]\n",
+    "        padded_sequences_y = [torch.cat([torch.tensor(seq[1]), torch.tensor([pad_token_y] * (max_len_y - len(seq[1])))]) for seq in sequences]\n",
+    "\n",
+    "        # Stack tensors to create a 2D tensor\n",
+    "        padded_sequences_x = torch.stack(padded_sequences_x)\n",
+    "        padded_sequences_y = torch.stack(padded_sequences_y)\n",
     "\n",
     "        return padded_sequences_x, padded_sequences_y\n",
+    "\n",
     "    \n",
-    "    def collate_fn(self, batch):\n",
+    "    @staticmethod\n",
+    "    def collate_fn(batch):\n",
     "        x_batch, y_batch = zip(*batch)\n",
     "\n",
     "        # Padding sequences with different tokens\n",
-    "        x_padded, y_padded = self._pad_sequences(list(zip(x_batch, y_batch)), self.CHAR_TO_ID['<PAD>'], self.DIACRITIC_TO_ID['<PAD>'])\n",
+    "        char_pad_token = x_batch[0][0].new_zeros(1).item()  # Get the pad token from the first element of x_batch\n",
+    "        diacritic_pad_token = y_batch[0][0].new_zeros(1).item()  # Get the pad token from the first element of y_batch\n",
+    "\n",
+    "        x_padded, y_padded = TashkeelDataset._pad_sequences(list(zip(x_batch, y_batch)), char_pad_token, diacritic_pad_token)\n",
     "\n",
     "        return torch.tensor(x_padded), torch.tensor(y_padded)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = TashkeelDataset('../data/train.txt')"
+    "# train_dataset = TashkeelDataset('../data/train.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = TashkeelDataset('../data/val.txt')\n",
+    "val_dataset = TashkeelDataset('../data/val.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "\n",
     "# Create a DataLoader instance with collate_fn\n",
-    "dataloader = DataLoader(train_dataset, batch_size=256, shuffle=True, collate_fn=TashkeelDataset.collate_fn)"
+    "dataloader_train = DataLoader(val_dataset, batch_size=256, shuffle=True, collate_fn=TashkeelDataset.collate_fn)\n",
+    "dataloader_test = DataLoader(val_dataset, batch_size=256, shuffle=True, collate_fn=TashkeelDataset.collate_fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,11 +216,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "meshakkelaty = MeshakkelatyModel(vocab_size=len(train_dataset.CHAR_TO_ID), embedding_dim=25, hidden_size=256, output_size=len(train_dataset.DIACRITIC_TO_ID))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.optim as optim \n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(meshakkelaty.parameters())\n",
+    "epochs = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in range(epochs):\n",
+    "    meshakkelaty.train()\n",
+    "    for x_batch, y_batch in dataloader_train:\n",
+    "        optimizer.zero_grad()\n",
+    "        y_pred = meshakkelaty(x_batch)\n",
+    "        loss = criterion(y_pred.view(-1, len(train_dataset.DIACRITIC_TO_ID)), y_batch.argmax(dim=-1).view(-1))\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    meshakkelaty.eval()\n",
+    "    val_loss = 0.0\n",
+    "    with torch.no_grad():\n",
+    "        for x_val, y_val in dataloader_test:\n",
+    "            y_val_pred = meshakkelaty(x_val)\n",
+    "            val_loss += criterion(y_val_pred.view(-1, len(train_dataset.DIACRITIC_TO_ID)), y_val.argmax(dim=-1).view(-1)).item()\n",
+    "\n",
+    "    print(f'Epoch {epoch + 1}/{epochs}, Loss: {loss.item():.4f}, Val Loss: {val_loss / len(dataloader_test):.4f}')"
    ]
   }
  ],
