--- a/scripts/MeshakkelatyV2.ipynb
+++ b/scripts/MeshakkelatyV2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "        self.embedded_data = self._embedd_lines()\n",
     "\n",
     "    def __len__(self):\n",
-    "        return len(self.lines)\n",
+    "        return len(self.embedded_data)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
     "        x, y = self.embedded_data[idx]\n",
@@ -88,7 +88,6 @@
     "        \n",
     "    def _embedd_lines(self):\n",
     "        inputs_embeddings=[]\n",
-    "        one_hot_labels=[]\n",
     "        for line in self.tokenized_lines:\n",
     "            x = [self.CHAR_TO_ID['<SOS>']]\n",
     "            y = [self.DIACRITIC_TO_ID['<SOS>']]\n",
@@ -117,40 +116,12 @@
     "            \n",
     "            inputs_embeddings.append((x, y)) \n",
     "            \n",
-    "        return inputs_embeddings\n",
-    "\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def _pad_sequences(sequences, pad_token_x, pad_token_y):\n",
-    "        max_len_x = max(len(seq[0]) for seq in sequences)\n",
-    "        max_len_y = max(len(seq[1]) for seq in sequences)\n",
-    "\n",
-    "        padded_sequences_x = [torch.cat([torch.tensor(seq[0]), torch.tensor([pad_token_x] * (max_len_x - len(seq[0])))]) for seq in sequences]\n",
-    "        padded_sequences_y = [torch.cat([torch.tensor(seq[1]), torch.tensor([pad_token_y] * (max_len_y - len(seq[1])))]) for seq in sequences]\n",
-    "\n",
-    "        # Stack tensors to create a 2D tensor\n",
-    "        padded_sequences_x = torch.stack(padded_sequences_x)\n",
-    "        padded_sequences_y = torch.stack(padded_sequences_y)\n",
-    "\n",
-    "        return padded_sequences_x, padded_sequences_y\n",
-    "\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def collate_fn(batch):\n",
-    "        x_batch, y_batch = zip(*batch)\n",
-    "\n",
-    "        # Padding sequences with different tokens\n",
-    "        char_pad_token = x_batch[0][0].new_zeros(1).item()  # Get the pad token from the first element of x_batch\n",
-    "        diacritic_pad_token = y_batch[0][0].new_zeros(1).item()  # Get the pad token from the first element of y_batch\n",
-    "\n",
-    "        x_padded, y_padded = TashkeelDataset._pad_sequences(list(zip(x_batch, y_batch)), char_pad_token, diacritic_pad_token)\n",
-    "\n",
-    "        return torch.tensor(x_padded), torch.tensor(y_padded)"
+    "        return inputs_embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,20 +140,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "\n",
+    "import torch.nn.utils.rnn as rnn_utils\n",
+    "\n",
+    "def collate_fn(batch):\n",
+    "    x_batch, y_batch = zip(*batch)\n",
+    "    x_padded = rnn_utils.pad_sequence(x_batch, batch_first=True, padding_value=train_dataset.CHAR_TO_ID['<PAD>'])\n",
+    "    y_padded = rnn_utils.pad_sequence(y_batch, batch_first=True, padding_value=train_dataset.DIACRITIC_TO_ID['<PAD>'])\n",
+    "    return x_padded, y_padded\n",
+    "\n",
     "# Create a DataLoader instance with collate_fn\n",
-    "dataloader_train = DataLoader(val_dataset, batch_size=256, shuffle=True, collate_fn=TashkeelDataset.collate_fn)\n",
-    "dataloader_test = DataLoader(val_dataset, batch_size=256, shuffle=True, collate_fn=TashkeelDataset.collate_fn)"
+    "dataloader_train = DataLoader(val_dataset, batch_size=256, shuffle=True, collate_fn=collate_fn)\n",
+    "dataloader_test = DataLoader(val_dataset, batch_size=256, shuffle=True, collate_fn=collate_fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,6 +186,9 @@
     "        x = self.dropout1(x)\n",
     "        x, _ = self.blstm2(x)\n",
     "        x = self.dropout2(x)\n",
+    "        \n",
+    "        # Add a Global Average Pooling layer \n",
+    "        x = x.mean(dim=1)\n",
     "        x = self.dense1(x)\n",
     "        x = self.dense2(x)\n",
     "        x = self.output(x)\n",
@@ -216,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
