training loop on CUDA

--- a/scripts/MeshakkelatyV2.ipynb
+++ b/scripts/MeshakkelatyV2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,9 @@
     "import re\n",
     "import pickle as pkl\n",
     "from tqdm import tqdm\n",
+    "\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "class TashkeelDataset(Dataset):\n",
     "    def __init__(self, name, path):\n",
@@ -26,7 +29,7 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        x, y = self.embedded_data[idx]\n",
-    "        return torch.tensor(x), torch.tensor(y)\n",
+    "        return torch.tensor(x).to(device), torch.tensor(y).to(device)\n",
     "    \n",
     "    def _remove_tashkeel(self,data):\n",
     "        #double damma, double fatha, double kasera, damma, fatha, kasera, sukoon, shadd\n",
@@ -122,19 +125,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading train dataset Lines: 2500it [00:00, 119088.70it/s]\n",
-      "Tokenizing train dataset Lines: 100%|██████████| 2500/2500 [00:00<00:00, 12146.25it/s]\n",
-      "Embedding train dataset Lines: 100%|██████████| 15362/15362 [00:01<00:00, 7789.69it/s]\n",
-      "Reading validation dataset Lines: 2500it [00:00, 206966.68it/s]\n",
-      "Tokenizing validation dataset Lines: 100%|██████████| 2500/2500 [00:00<00:00, 12019.44it/s]\n",
-      "Embedding validation dataset Lines: 100%|██████████| 15362/15362 [00:02<00:00, 7467.63it/s]\n"
+      "Reading train dataset Lines: 2500it [00:00, 26449.60it/s]\n",
+      "Tokenizing train dataset Lines: 100%|██████████| 2500/2500 [00:00<00:00, 11781.66it/s]\n",
+      "Embedding train dataset Lines: 100%|██████████| 15362/15362 [00:02<00:00, 7118.28it/s]\n",
+      "Reading validation dataset Lines: 2500it [00:00, 178593.50it/s]\n",
+      "Tokenizing validation dataset Lines: 100%|██████████| 2500/2500 [00:00<00:00, 11110.07it/s]\n",
+      "Embedding validation dataset Lines: 100%|██████████| 15362/15362 [00:02<00:00, 6746.00it/s]\n"
      ]
     }
    ],
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,13 +163,13 @@
     "    return x_padded, y_padded\n",
     "\n",
     "# Create a DataLoader instance with collate_fn\n",
-    "dataloader_train = DataLoader(val_dataset, batch_size=4, shuffle=True, collate_fn=collate_fn)\n",
-    "dataloader_test = DataLoader(val_dataset, batch_size=4, shuffle=True, collate_fn=collate_fn)"
+    "dataloader_train = DataLoader(val_dataset, batch_size=64, shuffle=True, collate_fn=collate_fn)\n",
+    "dataloader_test = DataLoader(val_dataset, batch_size=64, shuffle=True, collate_fn=collate_fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,62 +204,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "meshakkelaty = MeshakkelatyModel(train_dataset.CHAR_TO_ID, train_dataset.DIACRITIC_TO_ID)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch.optim as optim \n",
+    "from torchmetrics import Accuracy\n",
+    "\n",
+    "meshakkelaty = MeshakkelatyModel(train_dataset.CHAR_TO_ID, train_dataset.DIACRITIC_TO_ID).to(device)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(meshakkelaty.parameters())\n",
-    "epochs = 10"
+    "epochs = 10\n",
+    "metric = Accuracy(task=\"multiclass\", num_classes=len(train_dataset.DIACRITIC_TO_ID)).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[192], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m     y_pred \u001b[38;5;241m=\u001b[39m meshakkelaty(x_batch)\n\u001b[0;32m      6\u001b[0m     loss \u001b[38;5;241m=\u001b[39m criterion(y_pred\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mlen\u001b[39m(train_dataset\u001b[38;5;241m.\u001b[39mDIACRITIC_TO_ID)), y_batch\u001b[38;5;241m.\u001b[39margmax(dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m----> 7\u001b[0m     \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[0;32m     10\u001b[0m meshakkelaty\u001b[38;5;241m.\u001b[39meval()\n",
-      "File \u001b[1;32mc:\\Users\\Omar\\anaconda3\\envs\\nlp\\lib\\site-packages\\torch\\_tensor.py:492\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    482\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    483\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    484\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[0;32m    485\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    490\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[0;32m    491\u001b[0m     )\n\u001b[1;32m--> 492\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    493\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[0;32m    494\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Omar\\anaconda3\\envs\\nlp\\lib\\site-packages\\torch\\autograd\\__init__.py:251\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    246\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[0;32m    248\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[0;32m    249\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    250\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 251\u001b[0m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    252\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    253\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    254\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    255\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    256\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    257\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    258\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    259\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([64, 496, 19])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x,y=next(iter(dataloader_train))\n",
+    "print(y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([64, 496, 19])\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = meshakkelaty(x)\n",
+    "print(y_pred.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10:  14%|█▍        | 34/241 [00:30<04:32,  1.32s/it]"
      ]
     }
    ],
    "source": [
     "for epoch in range(epochs):\n",
     "    meshakkelaty.train()\n",
-    "    for x_batch, y_batch in dataloader_train:\n",
+    "    for x_batch, y_batch in tqdm(dataloader_train, desc=f\"Epoch {epoch + 1}/{epochs}\"):\n",
+    "        x_batch, y_batch = x_batch.to(device), y_batch.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        y_pred = meshakkelaty(x_batch)\n",
-    "        loss = criterion(y_pred.view(-1, len(train_dataset.DIACRITIC_TO_ID)), y_batch.argmax(dim=-1).view(-1))\n",
+    "        # loss = criterion(y_pred.view(-1, len(train_dataset.DIACRITIC_TO_ID)), y_batch.view(-1, len(train_dataset.DIACRITIC_TO_ID)))\n",
+    "        loss = criterion(y_pred, y_batch.float())\n",
+    "        # loss = criterion(y_pred.view(-1, len(train_dataset.DIACRITIC_TO_ID)), y_batch.argmax(dim=-1).view(-1))\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "        # train_acc = metric(y_pred.argmax(dim=-1), y_batch)\n",
+    "        # train_acc = metric(y_pred.argmax(dim=-1).view(-1, len(train_dataset.DIACRITIC_TO_ID)), y_batch.view(-1))\n",
+    "        train_acc = metric(y_pred, y_batch.squeeze(1))\n",
+    "    train_acc = metric.compute()       \n",
+    "    print(f'Epoch {epoch + 1}/{epochs}, Train Accuracy: {train_acc:.4f}')\n",
+    "   \n",
+    "    # meshakkelaty.eval()\n",
+    "    # val_loss = 0.0\n",
+    "    # with torch.no_grad():\n",
+    "    #     for x_val, y_val in dataloader_test:\n",
+    "    #         y_val_pred = meshakkelaty(x_val)\n",
+    "    #         val_loss += criterion(y_val_pred.view(-1, len(train_dataset.DIACRITIC_TO_ID)), y_val.argmax(dim=-1).view(-1)).item()\n",
     "\n",
-    "    meshakkelaty.eval()\n",
-    "    val_loss = 0.0\n",
-    "    with torch.no_grad():\n",
-    "        for x_val, y_val in dataloader_test:\n",
-    "            y_val_pred = meshakkelaty(x_val)\n",
-    "            val_loss += criterion(y_val_pred.view(-1, len(train_dataset.DIACRITIC_TO_ID)), y_val.argmax(dim=-1).view(-1)).item()\n",
-    "\n",
-    "    print(f'Epoch {epoch + 1}/{epochs}, Loss: {loss.item():.4f}, Val Loss: {val_loss / len(dataloader_test):.4f}')"
+    "    # print(f'Epoch {epoch + 1}/{epochs}, Loss: {loss.item():.4f}, Val Loss: {val_loss / len(dataloader_test):.4f}')"
    ]
   }
  ],
